--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
 _repo: The-Flying-Saucers-are-Real_5883
-_version: 0.2.0
+_version: 0.2.1
 covers:
 - cover_type: generated
   image_path: cover.png
@@ -29,5 +29,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Unidentified flying objects'
 - !lcc 'TL'
+- GITenberg
 title: The Flying Saucers are Real
 url: http://www.gutenberg.org/ebooks/5883
